// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfilePageLinks - Snapshots > matches snapshot with custom links 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="shrink-0 text-foreground"
        data-size="16"
        data-testid="mock-icon"
      >
        Icon
      </span>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        Example
      </span>
    </a>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with empty links 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <div
      class="mx-auto w-full mt-2 flex flex-col"
      data-testid="container"
    >
      <span
        class="text-base font-medium text-muted-foreground"
        data-testid="typography"
      >
        No links added yet.
      </span>
    </div>
  </div>
</div>
`;

exports[`ProfilePageLinks - Snapshots > matches snapshot with links 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <h2
    class="text-2xl font-light text-muted-foreground"
    data-testid="heading-2"
  >
    Links
  </h2>
  <div
    class="flex flex-col"
    data-testid="container"
  >
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://bitcoin.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="shrink-0 text-foreground"
        data-size="16"
        data-testid="mock-icon"
      >
        Icon
      </span>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        bitcoin.org
      </span>
    </a>
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://twitter.com/test"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="shrink-0 text-foreground"
        data-size="16"
        data-testid="mock-icon"
      >
        Icon
      </span>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        twitter.com/test
      </span>
    </a>
    <a
      class="flex items-center gap-2.5 py-1"
      href="https://github.com/test"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="shrink-0 text-foreground"
        data-size="16"
        data-testid="mock-icon"
      >
        Icon
      </span>
      <span
        class="flex-1 text-base font-medium text-secondary-foreground"
        data-testid="typography"
      >
        github.com/test
      </span>
    </a>
  </div>
</div>
`;
